# learn-agents

./: README.md  output.json  pyproject.toml
adk/02-tool-agent/tool_agent/: agent.py
adk/03-litellm/litellm_basic/: agent.py
adk/05-session-and-state/: basic_stateful_session.py
adk/05-session-and-state/question_answering_agent/: agent.py
adk/06-persistent-storage/: my_agent_data.db
adk/07-multi-agent/manager/: __init__.py  agent.py
adk/07-multi-agent/manager/sub_agents/news_analyst/: __init__.py  agent.py
adk/08-stateful-multi-agent/: main.py
adk/08-stateful-multi-agent/customer_service_agent/: agent.py
adk/08-stateful-multi-agent/customer_service_agent/sub_agents/: __init__.py
adk/10-sequential-agent/lead_qualification_agent/: agent.py
adk/10-sequential-agent/lead_qualification_agent/subagents/: __init__.py
adk/11-parallel-agent/system_monitor_agent/subagents/: __init__.py
adk/12-loop-agent/linkedin_post_agent/subagents/: __init__.py
adk/13-custom-agent/: story_flow_agent.py  utils.py
adk/agent-with-mcp/semgrep_agent/security_agent/: agent.py
adk/agent-with-mcp/tools/: code_fetcher.py  data_preparation.py  git_operations.py  language_identifier.py  pat_handler.py
adk/code-review-agent/: DESIGN.md  PLAN.md  __init__.py
adk/code-review-agent/agents/: __init__.py
adk/code-review-agent/agents/orchestrator/: README.md  agent.py  state_manager.py  subagent_example.py
adk/code-review-agent/tools/: __init__.py  git_operations.py
adk/serena-agent/serena/: agent.py
gemini-cli/: README.md
(+14 files in other folders)
