[project]
name = "learn-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gitpython>=3.1.44",
    "google-adk>=1.5.0",
    "google-generativeai>=0.8.5",
    "litellm>=1.73.2",
    "loguru>=0.7.3",
    "opik>=1.7.41",
    "psutil>=7.0.0",
    "pygithub>=2.6.1",
    "python-dotenv>=1.1.1",
    "python-gitlab>=6.1.0",
    "yfinance>=0.2.64",
]
